Izmjena body taga

--- a/Git/index.html
+++ b/Git/index.html
@@ -6,6 +6,6 @@
     <title>Bok Svima</title>
 </head>
 <body>
-    
+    <h1 style="color: brown;">Evo malo da istetiram radi li git točno</h1>
 </body>
 </html>
